--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "dexie": "^3.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
