--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@zxing/browser": "0.0.10",
+    "@zxing/library": "^0.19.1",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "dexie": "^3.2.0",
