--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vee-validate": "^3.4.14",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
+    "vue-codemirror": "^4.0.6",
     "vue-offline": "^2.0.8",
     "vue-router": "^3.2.0",
     "vue-uuid": "^2.0.2",
