--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@zxing/browser": "0.0.10",
     "@zxing/library": "^0.19.1",
     "axios": "^0.24.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "dexie": "^3.2.0",
     "firebase": "^7.14.5",
@@ -21,6 +22,7 @@
     "vee-validate": "^3.4.14",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
+    "vue-chartjs": "^3.5.1",
     "vue-codemirror": "^4.0.6",
     "vue-offline": "^2.0.8",
     "vue-router": "^3.2.0",
